# FuncGraft

./: .gitignore  CLAUDE.md  Makefile  README.md  pytest.ini  pytest.toml  template.py
.funcgraft/: README.txt  funcgraft.toml
src/: CMakeLists.txt  cli_params.hpp  configs.cpp  configs.hpp  console.cpp  console.hpp  curl_base.cpp  curl_base.hpp  export_file.cpp  export_file.hpp  file_io.cpp  file_io.hpp  import_file.cpp  import_file.hpp  instructions.cpp  main.cpp  params.cpp  params.hpp  process_file.cpp  process_file.hpp  prompt.cpp  prompt.hpp  query_llm.cpp  query_llm.hpp  query_ollama.hpp  query_openai.cpp  query_openai.hpp  structured_output.hpp  text_manip.cpp  text_manip.hpp  utils.cpp  utils.hpp
src/adapters/: adapter_ollama.cpp  adapter_ollama.hpp  adapter_openai.cpp  adapter_openai.hpp  components.cpp  components.hpp  curl_base.cpp  curl_base.hpp  errors.cpp  errors.hpp  responses.cpp  responses.hpp  responses_ollama.cpp  responses_ollama.hpp  responses_openai.cpp  responses_openai.hpp  structured_output.cpp  structured_output.hpp  system_prompts.cpp  system_prompts.hpp
src/completion/: adapter_ollama.cpp  adapter_ollama.hpp  adapter_openai.cpp  adapter_openai.hpp  curl_base.cpp  curl_base.hpp  query_ollama.cpp  query_ollama.hpp  query_openai.cpp  query_openai.hpp  structured_output.cpp  structured_output.hpp
src/core/: code.cpp  code.hpp  configs.cpp  configs.hpp  datadir.cpp  datadir.hpp  file_io.cpp  file_io.hpp  instructions.cpp  instructions.hpp  prompt.cpp  prompt.hpp  reporting.cpp  reporting.hpp  run_queries.cpp  run_queries.hpp  text_manip.cpp  text_manip.hpp  user_prompts.cpp  user_prompts.hpp  utils.hpp
src/pipeline/: file_io.cpp  file_io.hpp  generate_prompt.cpp  instructions.cpp  process_file.cpp  process_file.hpp  text_manip.cpp  text_manip.hpp
src/prompt/: generate_prompt.cpp  generate_prompt.hpp  instructions.cpp  instructions.hpp
src/queries/: query_classify.cpp  query_classify.hpp  query_edit_code.cpp  query_edit_code.hpp  responses.cpp  responses.hpp  responses_ollama.cpp  responses_ollama.hpp  responses_openai.cpp  responses_openai.hpp  structured_output.cpp  structured_output.hpp  system_prompts.cpp  system_prompts.hpp
tests/: conftest.py  dummy.py  edit.txt  test_edit.py  test_edit_ollama.py  test_edit_openai.py  test_input_output_files.py  test_instructions_opts.py  test_misc.py  test_model_opts.py  test_slow.py  utils.py
tests/test_files/: dummy_with_bad_delims.py  dummy_with_bad_delims_2.py  dummy_with_delims.py  dummy_with_empty_delims.py  dummy_with_empty_delims_2.py
